<resources>
    <string name="app_name" translatable="false">SageSMS</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">If you see this, send in an issue please!</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_mms_part_save">Save to gallery</string>
    <string name="menu_mms_part_share">Share</string>
    <string name="menu_mms_part_forward">Forward</string>
    <string name="menu_mms_part_open">Open externally</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_select_all">Select all</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_menu_send_now">Send now</string>
    <string name="main_menu_edit_message">Edit message</string>
    <string name="main_menu_rename_conversation">Rename conversation</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sync_emojis">Parsing emoji reactions…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_sender_draft">Draft: %s</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make QUIK your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">QUIK needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">QUIK needs permission to view your contacts</string>
    <string name="main_permission_notifications">QUIK needs permission to display notifications</string>
    <string name="main_permission_allow">Allow</string>
    <string name="scheduled_menu_send_now">Send now</string>
    <string name="scheduled_menu_edit_message">Edit message</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="message_management_title">Message Management</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">DEPRECATED - drawer_plus</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">DEPRECATED - drawer_plus_banner_title</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying QUIK?</string>
    <string name="rate_summary">Share some love and leave us a Star on GitHub!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <plurals name="dialog_delete_chat">
        <item quantity="one">Are you sure you would like to delete this message?</item>
        <item quantity="other">Are you sure you would like to delete %d messages?</item>
    </plurals>
    <plurals name="dialog_send_now">
        <item quantity="one">Are you sure you would like to send this message now?</item>
        <item quantity="other">Are you sure you would like to send %d messages now?</item>
    </plurals>
    <string name="dialog_edit_scheduled_message_title">Edit message</string>
    <string name="dialog_edit_scheduled_message">Editing this message will remove it from the schedule.\n\nMake sure to re-submit it on the next screen, or it will be lost.\n\nDo you want to continue?</string>
    <string name="dialog_edit_scheduled_message_positive_button">Yes, edit the message</string>
    <string name="dialog_clear_compose_title">Clear message</string>
    <string name="dialog_clear_compose">Clear the message? This action can\'t be undone.</string>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary_on">Recipients and replies will be visible to everyone</string>
    <string name="compose_send_group_summary_off">Messages will be sent separately to all recipients</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled time:</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock QUIK+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_scheduled_view">Scheduled messages for this conversation</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_no_valid_recipients">Can\'t send to other participants</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_share">Share text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_notification_customize">Customize notification</string>
    <string name="compose_menu_notification_rule_preview">Preview notification (rules)</string>
    <string name="notification_rule_preview_subtext">Rule preview</string>
    <string name="notification_rule_preview_need_permission">Turn on notifications for this app to preview.</string>
    <string name="notification_rule_preview_message_missing">Could not load that message for preview.</string>
    <string name="notification_rule_preview_no_conversation">Could not load the conversation for preview.</string>
    <string name="notification_rule_preview_failed">Could not show the preview notification.</string>
    <string name="notification_customize_title">Notification</string>
    <string name="notification_customize_pick_title">Select a message</string>
    <string name="notification_customize_edit_title">Edit rule</string>
    <string name="notification_customize_body_label">Sample message</string>
    <string name="notification_customize_search_label">Search sample (select from message)</string>
    <string name="notification_customize_search_hint">Highlight text from the sample message, then tap \"Use selection as search\"</string>
    <string name="notification_customize_display_label">Extract sample (select inside search text)</string>
    <string name="notification_customize_display_hint">Highlight the dynamic part inside the search text, then tap \"Use selection as extract\"</string>
    <string name="notification_customize_prefix_label">Notification prefix (optional)</string>
    <string name="notification_customize_prefix_hint">Example: Delivery code:</string>
    <string name="notification_customize_apply_to_all">Apply regardless of sender</string>
    <string name="notification_customize_use_selection_search">Use selection as search</string>
    <string name="notification_customize_use_selection_extract">Use selection as extract</string>
    <string name="notification_customize_save">Save</string>
    <string name="notification_customize_error_empty">Set both search sample and extract sample</string>
    <string name="notification_customize_error_not_in_body">Selected extract text must exist in search sample</string>
    <string name="notification_customize_error_search_not_in_sample">The search text must appear in the sample</string>
    <string name="notification_customize_error_extract_inside_search">Extract sample must be selected inside the search sample</string>
    <string name="notification_customize_error_select_text">Select text first</string>
    <string name="notification_customize_error_pick_message">Open this screen from a selected message that has text</string>
    <string name="notification_customize_saved">Rule saved</string>
    <string name="notification_rules_title">Notification rules</string>
    <string name="notification_rules_summary">Manage global and sender-based notification extraction rules</string>
    <string name="notification_rules_edit_title">Edit rule</string>
    <string name="notification_rules_delete_title">Delete rule</string>
    <string name="notification_rules_delete_body">Delete this notification rule?</string>
    <string name="notification_rules_section_all">All (global)</string>
    <string name="notification_rules_section_sender">Sender: %1$s</string>
    <string name="notification_rules_add_title">Add new rule</string>
    <string name="notification_rules_add_pick_conversation">Pick conversation flow</string>
    <string name="notification_rules_add_global">Create global rule</string>
    <string name="notification_rules_add_hint">Open a conversation, long-press one message, then tap \"Customize notification\".</string>
    <string name="notification_rules_new_global_title">New global rule</string>
    <string name="notification_rules_export_title">Export rules</string>
    <string name="notification_rules_import_title">Import rules</string>
    <string name="notification_rules_import_hint">Paste JSON array exported from rules list</string>
    <string name="notification_rules_export_copied">Rules JSON copied to clipboard</string>
    <string name="notification_rules_import_success">Imported %1$d rules</string>
</resources>